Dependencies/MELibraries/32/Delphi/MEGSV.PAS


function GSVsetAutoZeroCounter(no:Integer; ctr:LongInt):Integer; stdcall;

function GSVgetAutoZeroCounter(no:Integer):LongInt; stdcall;

function GSVsetUserTextChar(no, addr:Integer; c:Byte):Integer; stdcall;

function GSVgetRanges(no, channel, inx:Integer; var prange:Double):Integer; stdcall;

function GSVsetRanges(no, channel, inx:Integer; range:Double):Integer; stdcall;

function GSVgetTxModeConfig(no:Integer):Integer; stdcall;

function GSVsetTxModeTransmit4(no, t4:Integer):Integer; stdcall;

function GSVgetTxModeTransmit4(no:Integer):Integer; stdcall;

function GSVsetTxModeRepeat3(no, r3:Integer):Integer; stdcall;

function GSVgetTxModeRepeat3(no:Integer):Integer; stdcall;

function GSVsetTxModeTransmit5(no, t5:Integer):Integer; stdcall;

function GSVgetTxModeTransmit5(no:Integer):Integer; stdcall;

function GSVsetTxModeReadOnly(no, ro:Integer):Integer; stdcall;

function GSVgetTxModeReadOnly(no:Integer):Integer; stdcall;

function GSVsetSpecialModeSlow(no, slow:Integer):Integer; stdcall;

function GSVgetSpecialModeSlow(no:Integer):Integer; stdcall;

function GSVsetSpecialModeAverage(no, avg:Integer):Integer; stdcall;

function GSVgetSpecialModeAverage(no:Integer):Integer; stdcall;

function GSVsetSpecialModeFilter(no, flt:Integer):Integer; stdcall;

function GSVgetSpecialModeFilter(no:Integer):Integer; stdcall;

function GSVsetSpecialModeMax(no, mx:Integer):Integer; stdcall;

function GSVgetSpecialModeMax(no:Integer):Integer; stdcall;

function GSVsetSpecialModeFilterAuto(no, fltauto:Integer):Integer; stdcall;

function GSVgetSpecialModeFilterAuto(no:Integer):Integer; stdcall;

function GSVsetSpecialModeFilterOrder5(no, fltord5:Integer):Integer; stdcall;

function GSVgetSpecialModeFilterOrder5(no:Integer):Integer; stdcall;

function GSVsetSpecialModeSleep(no, sleep:Integer):Integer; stdcall;

function GSVgetSpecialModeSleep(no:Integer):Integer; stdcall;

function GSVsetSpecialModeAutoZero(no, autozero:Integer):Integer; stdcall;

function GSVgetSpecialModeAutoZero(no:Integer):Integer; stdcall;

function GSVsetSpecialModeNoiseCut(no, noisecut:Integer):Integer; stdcall;

function GSVgetSpecialModeNoiseCut(no:Integer):Integer; stdcall;

function GSVreadSamplingFrequency(no:Integer):Double; stdcall;

function GSVreadSamplingFactor(no:Integer):Integer; stdcall;

function GSVsetBaudRate(no:Integer; baudrate:LongInt):Integer; stdcall;

function GSVgetBaudRate(no:Integer):LongInt; stdcall;

function GSVsetCanBaudRate(no:Integer; baudrate:LongInt):Integer; stdcall;

function GSVgetCanBaudRate(no:Integer):LongInt; stdcall;

function GSVisSamplingFrequencyProtocolLinear(no:Integer):Integer; stdcall;

function GSVisSamplingFactorProtocolLinear(no:Integer):Integer; stdcall;

function GSVsetCanID(no, idtype, id:Integer):Integer; stdcall;

function GSVgetCanID(no, idtype:Integer):Integer; stdcall;

function GSVsetCanBaud(no, baud:Integer):Integer; stdcall;

function GSVgetCanBaud(no:Integer):Integer; stdcall;

function GSVisCanAvailable(no:Integer):Integer; stdcall;

function GSVsetCanActive(no, active:Integer):Integer; stdcall;

function GSVgetCanActive(no:Integer):Integer; stdcall;

function GSVsetCanMode20B(no, mode20b:Integer):Integer; stdcall;

function GSVgetCanMode20B(no:Integer):Integer; stdcall;

function GSVsetUserText(no:Integer; txt:PChar):Integer; stdcall;

implementation

{$IFDEF WIN32}

const
  MEDLL = 'MEGSV.DLL';

function GSVversion:LongInt;
  external MEDLL index 1;

function GSVmodel(no:Integer):Integer;
  external MEDLL index 2;

function MEreservedExec(no, code:Integer; rexpro:MEreservedExecProc; arg:Pointer):Integer;
  external MEDLL index 3;

function MErequestEvent(no:Integer):Integer;
  external MEDLL index 4;

function GSVrevision:LongInt;
  external MEDLL index 5;

function GSVgetLocalBaudRate(no:Integer):LongInt;
  external MEDLL index 8;

function GSVactivateExtended(no:Integer; var actex:GSV_ACTIVATE_EXTENDED):Integer;
  external MEDLL index 9;

function GSVactivate(no:Integer; buffersize:LongInt):Integer;
  external MEDLL index 10;

procedure GSVrelease(no:Integer);
  external MEDLL index 11;

function GSVinitialize(no:Integer):Integer;
  external MEDLL index 12;

function GSVflushBuffer(no:Integer):Integer;
  external MEDLL index 13;

function MEinternalStatus(no:Integer):LongInt;
  external MEDLL index 14;

function GSVgetValues(no:PInteger; n:Integer):Integer;
  external MEDLL index 17;

function MEsendBytesToDevices(no:PInteger; n:Integer; var pbuf; count:Integer):Integer;
  external MEDLL index 18;

function MEsendBytes(no:Integer; var pbuf; count:Integer):Integer;
  external MEDLL index 19;

function GSVreceived(no:Integer):Integer;
  external MEDLL index 20;

function GSVread(no:Integer; var ad:Double):Integer;
  external MEDLL index 21;

function GSVreadMultiple(no:Integer; ad:PDouble; count:Integer; var valsread:Integer):Integer;
  external MEDLL index 22;

function GSVcopyMemory(no, dc, addr:Integer; var buffer):Integer;
  external MEDLL index 23;

function GSVcheckMemory(no, dc, addr:Integer; buffer:PByte):Integer;
  external MEDLL index 24;

function GSVreadStatus(no:Integer; var ad:Double; var ps:Byte):Integer;
  external MEDLL index 25;

function GSVreadStatusMultiple(no:Integer; ad:PDouble; ps:PByte; count:Integer; var valsread:Integer):Integer;
  external MEDLL index 26;

function GSVcopyLinear(no:Integer; pd:PDouble; nd:Integer; pr:PInteger):Integer;
  external MEDLL index 27;

function GSVasynchronousSendBytes(no:Integer; var pbuf; count:Integer; handle:Pointer):Integer;
  external MEDLL index 28;

function GSVsynchronizeSendBytes(no:Integer):Integer;
  external MEDLL index 29;

function GSVgetOptionsCode(no:Integer):Integer;
  external MEDLL index 30;

function GSVgetOptionsExtension3(no:Integer):Integer;
  external MEDLL index 31;

function GSVgetOptionsLinear(no:Integer):Integer;
  external MEDLL index 32;

function GSVgetOptionsExtension21(no:Integer):Integer;
  external MEDLL index 33;

function GSVgetOptionsSleepMode(no:Integer):Integer;
  external MEDLL index 34;

function GSVgetOptionsCommandTest(no:Integer):Integer;
  external MEDLL index 35;

function MEwriteRanges(no, channel, inx:Integer; ia:LongInt):Integer;
  external MEDLL index 49;

function GSVisBipol(no:Integer):Integer;
  external MEDLL index 50;

function GSVgetFreq(no:Integer):Double;
  external MEDLL index 51;

function GSVgetGain(no:Integer):Integer;
  external MEDLL index 52;

function GSVgetChannel(no:Integer):Integer;
  external MEDLL index 53;

function MEsetModeLock(no, slock:Integer; id:PChar):Integer;
  external MEDLL index 54;

function GSVgetModeLock(no:Integer):Integer;
  external MEDLL index 55;

function GSVsetModeLinear(no, lin:Integer):Integer;
  external MEDLL index 56;

function GSVgetModeLinear(no:Integer):Integer;
  external MEDLL index 57;

function GSVsetModeAverage(no, avg:Integer):Integer;
  external MEDLL index 58;

function GSVgetModeAverage(no:Integer):Integer;
  external MEDLL index 59;

function GSVsetModeSI(no, msi:Integer):Integer;
  external MEDLL index 60;

function GSVgetModeSI(no:Integer):Integer;
  external MEDLL index 61;

function GSVsetModeText(no, mt:Integer):Integer;
  external MEDLL index 62;

function GSVgetModeText(no:Integer):Integer;
  external MEDLL index 63;

function GSVsetModeMax(no, mx:Integer):Integer;
  external MEDLL index 64;

function GSVgetModeMax(no:Integer):Integer;
  external MEDLL index 65;

function GSVsetModeLog(no, lg:Integer):Integer;
  external MEDLL index 66;

function GSVgetModeLog(no:Integer):Integer;
  external MEDLL index 67;

function GSVsetModeWindow(no, win:Integer):Integer;
  external MEDLL index 68;

function GSVgetModeWindow(no:Integer):Integer;
  external MEDLL index 69;

function GSVhasLCD(no:Integer):Integer;
  external MEDLL index 70;

function GSVhasADC(no:Integer):Integer;
  external MEDLL index 71;

function GSVhasUII(no:Integer):Integer;
  external MEDLL index 72;

function GSVisSI(no:Integer):Integer;
  external MEDLL index 73;

function GSVisWL(no:Integer):Integer;
  external MEDLL index 74;

function GSVhasAF(no:Integer):Integer;
  external MEDLL index 75;

function GSVsetBridgeType(no, bt:Integer):Integer;
  external MEDLL index 80;

function GSVgetBridgeType(no:Integer):Integer;
  external MEDLL index 81;

function GSVsetBridgeInternal(no, bi:Integer):Integer;
  external MEDLL index 84;

function GSVgetBridgeInternal(no:Integer):Integer;
  external MEDLL index 85;

function GSVresetStatus(no:Integer):Integer;
  external MEDLL index 100;

function GSVgetScale(no:Integer):LongInt;
  external MEDLL index 101;

function GSVgetZero(no:Integer):LongInt;
  external MEDLL index 102;

function GSVgetControl(no:Integer):LongInt;
  external MEDLL index 103;

function GSVgetOffset(no:Integer):LongInt;
  external MEDLL index 104;

function GSVwriteScale(no:Integer; scale:LongInt):Integer;
  external MEDLL index 105;

function GSVwriteZero(no:Integer; zero:LongInt):Integer;
  external MEDLL index 106;

function GSVwriteControl(no:Integer; control:LongInt):Integer;
  external MEDLL index 107;

function GSVwriteOffset(no:Integer; offset:LongInt):Integer;
  external MEDLL index 108;

function GSVgetAll(no, pos:Integer):Integer;
  external MEDLL index 109;

function GSVsaveAll(no, pos:Integer):Integer;
  external MEDLL index 110;

function GSVsetCal(no:Integer):Integer;
  external MEDLL index 111;

function GSVsetZero(no:Integer):Integer;
  external MEDLL index 112;

function GSVsetScale(no:Integer):Integer;
  external MEDLL index 113;

function GSVsetOffset(no:Integer):Integer;
  external MEDLL index 114;

function GSVDispSetUnit(no, dispunit:Integer):Integer;
  external MEDLL index 115;

function GSVDispSetNorm(no:Integer; norm:Double):Integer;
  external MEDLL index 116;

function GSVDispSetDPoint(no, dpoint:Integer):Integer;
  external MEDLL index 117;

function GSVsetFreq(no:Integer; freq:Double):Integer;
  external MEDLL index 118;

function GSVsetGain(no, gain:Integer):Integer;
  external MEDLL index 119;

function GSVsetBipolar(no:Integer):Integer;
  external MEDLL index 120;

function GSVsetUnipolar(no:Integer):Integer;
  external MEDLL index 121;

function MEsetCal(no:Integer; cal:Double):Integer;
  external MEDLL index 123;

function MEgetCal(no:Integer):Double;
  external MEDLL index 124;

function MEsendID(no:Integer; id:PChar):Integer;
  external MEDLL index 125;

function GSVDispGetNorm(no:Integer):Double;
  external MEDLL index 126;

function GSVDispGetUnit(no:Integer):Integer;
  external MEDLL index 127;

function GSVDispGetDPoint(no:Integer):Integer;
  external MEDLL index 128;

function GSVswitch(no, on:Integer):Integer;
  external MEDLL index 129;

function MEwriteSerialNo(no:Integer; number:PChar):Integer;
  external MEDLL index 130;

function GSVgetSerialNo(no:Integer; number:PChar):Integer;
  external MEDLL index 131;

function GSVsetThreshold(no:Integer; thon, thoff:Double):Integer;
  external MEDLL index 132;

function GSVgetThreshold(no:Integer; var thon, thoff:Double):Integer;
  external MEDLL index 133;

function GSVsetChannel(no, channel:Integer):Integer;
  external MEDLL index 134;

function GSVstopTransmit(no:Integer):Integer;
  external MEDLL index 135;

function GSVstartTransmit(no:Integer):Integer;
  external MEDLL index 136;

function GSVclearBuffer(no:Integer):Integer;
  external MEDLL index 137;

function GSVsetMode(no, mode:Integer):Integer;
  external MEDLL index 138;

function GSVgetMode(no:Integer):Integer;
  external MEDLL index 139;

function MEwriteEquipment(no, equip:Integer):Integer;
  external MEDLL index 140;

function GSVgetEquipment(no:Integer):Integer;
  external MEDLL index 141;

function GSVfirmwareVersion(no:Integer):LongInt;
  external MEDLL index 143;

function GSVsetGageFactor(no:Integer; gf:Double):Integer;
  external MEDLL index 144;

function GSVgetGageFactor(no:Integer):Double;
  external MEDLL index 145;

function GSVsetPoisson(no:Integer; poiss:Double):Integer;
  external MEDLL index 146;
